--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,13 @@
     </header>
     <main>
         <p>Tekst</p>
-        <div class="button">
-            <a href="https://ihani.pl" class="btn">Przycisk</a>
+        <div style="display: flex; flex-direction: row; gap: 20px;">
+            <div class="button">
+                <a href="https://ihani.pl" class="btn">Przycisk</a>
+            </div>
+            <div class="button">
+                <a href="https://ihani.pl" class="btn">Przycisk</a>
+            </div>
         </div>
     </main>
     <footer>
