boba drops completed

--- a/src/index.html
+++ b/src/index.html
@@ -3,26 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Baza Strony</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Site for Boba Drops</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <header>
-        <h1>Tytuł</h1>
+        <h1>Recipe for Polish Sweet Cones!</h1>
     </header>
     <main>
-        <p>Tekst</p>
-        <div style="display: flex; flex-direction: row; gap: 20px;">
-            <div class="button">
-                <a href="https://ihani.pl" class="btn">Przycisk</a>
+        <img src="./szyszki.jpg" class="image" style="width:300px; height:auto;">
+        <p>Items you need:</p>
+        <div style="display: flex; flex-direction: column; gap: 40px; align-items: center;">
+            <div class="recipe" style="text-align:left">
+                <p>
+
+        - 300 g of cream fudge (krówki) - 22 pieces<br>
+        - 80 g of puffed rice<br>
+        - 100 g of butter - half a standard block<br>
+        - optional: a teaspoon of cocoa powder<br>
+
+
+                </p>
             </div>
             <div class="button">
-                <a href="https://ihani.pl" class="btn">Przycisk</a>
+                <a href="https://ihani.pl" class="btn">Ihani Club Site!</a>
             </div>
         </div>
     </main>
     <footer>
-        <p>Stopka</p>
+        <p>;D</p>
     </footer>
 </body>
 </html>
